# AGENT-AI-

./: README.md  project1.ipynb
test_crew/: README.md  pyproject.toml
test_crew/src/test_crew/: crew.py  main.py
test_crew/src/test_crew/config/: agents.yaml  tasks.yaml
