[project]
name = "test_crew"
version = "0.1.0"
description = "test_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
test_crew = "test_crew.main:run"
run_crew = "test_crew.main:run"
train = "test_crew.main:train"
replay = "test_crew.main:replay"
test = "test_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
